# Brief

./: .gitignore  Cargo.toml  README.md
crates/brief-ast/: Cargo.toml
crates/brief-bytecode/: Cargo.toml
crates/brief-cli/: Cargo.toml
crates/brief-cli/src/: error.rs  lib.rs  main.rs  repl.rs  run.rs
crates/brief-cli/tests/: cli_tests.rs  common.rs  integration_flow_tests.rs  integration_tests.rs  runtime_integration_tests.rs
crates/brief-diagnostic/: Cargo.toml
crates/brief-hir/: Cargo.toml
crates/brief-hir/src/: desugar.rs  emit.rs  error.rs  hir.rs  lib.rs  resolve.rs  symbol.rs
crates/brief-hir/tests/: common.rs  desugar.rs  emit.rs  integration.rs  resolve.rs  snapshots.rs
crates/brief-hir/tests/snapshots/: snapshots__complex_desugaring.snap  snapshots__ctor_implicit_assign.snap  snapshots__for_in_loop.snap  snapshots__function_declaration.snap  snapshots__match_multiple_patterns.snap  snapshots__match_statement.snap  snapshots__postfix_dec.snap  snapshots__postfix_inc.snap  snapshots__variable_resolution.snap
crates/brief-lexer/: Cargo.toml
crates/brief-parser/: Cargo.toml
crates/brief-runtime/: Cargo.toml
crates/brief-vm/: Cargo.toml
tests/pipeline/: Cargo.toml
tests/pipeline/src/: lib.rs
tests/pipeline/tests/: pipeline.rs
tests/pipeline/tests/snapshots/: pipeline__bytecode_e70fa9571d6e171d15094ab9c6714b3e772e4f2922dcd5c890263bb86e785d15.snap  pipeline__bytecode_e7b1cc2492de7b499838007392b5dd239fbe2759de52087d5f16e128e5fc25ef.snap  pipeline__bytecode_f6c8bf7374db1d812d2af1118df8ec91dd6fc69269394c4b3efc06d30ac0d666.snap
(+75 files in other folders)
